--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test-watch": "jest --watchAll"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "engines": {
     "node": "8.9.4"
@@ -14,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "jest": "^23.4.2",
     "socket.io": "^1.7.4"
   }
 }
