--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "jest": "^23.4.2",
+    "moment": "^2.22.2",
     "socket.io": "^1.7.4"
   }
 }
